Remove NodePort from services and add containerPort to agent deployment

--- a/agent-deployment.yaml
+++ b/agent-deployment.yaml
@@ -29,3 +29,5 @@ spec:
           - agent/config/endpoints.yml
           - -u
           - agent/default
+        ports:
+        - containerPort: 5005
